PR7035: don't suppress all error messages during listings mode